This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Buffer overflow in BufferedIOBase.readinto()
Type: crash Stage: resolved
Components: Extension Modules, IO Versions: Python 3.3, Python 3.4, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: benjamin.peterson, pitrou, python-dev, serhiy.storchaka, stutzbach
Priority: normal Keywords: patch

Created on 2013-05-20 20:34 by serhiy.storchaka, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
bufferedio_buffer_overflow.patch serhiy.storchaka, 2013-05-20 20:34 review
Messages (2)
msg189691 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2013-05-20 20:34
BufferedIOBase.readinto() overflows output buffer if read() returns more data than requested. Here is a patch.

See also related issue17872.
msg190208 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-05-28 13:28
New changeset b864f4056b78 by Serhiy Storchaka in branch '3.3':
Issue #18025: Fixed a segfault in io.BufferedIOBase.readinto() when raw
http://hg.python.org/cpython/rev/b864f4056b78

New changeset ad56dff3602f by Serhiy Storchaka in branch 'default':
Issue #18025: Fixed a segfault in io.BufferedIOBase.readinto() when raw
http://hg.python.org/cpython/rev/ad56dff3602f
History
Date User Action Args
2022-04-11 14:57:45adminsetgithub: 62225
2013-05-28 13:43:33serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2013-05-28 13:28:14python-devsetnosy: + python-dev
messages: + msg190208
2013-05-20 20:34:38serhiy.storchakacreate